Further post upgrade refactor and cleanup